--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .env
-Client\authentication-system\package.json
+Client\authentication-system\.env
 Server\node_modules
 Client\authentication-system\node_modules
